[package]
name = "guest-server"
version = "0.1.6"
edition = "2021"
description = "A simple HTTP server implementation"
license = "MIT"
repository = "https://github.com/strangerlanguage/guest"
homepage = "https://github.com/strangerlanguage/guest"
documentation = "https://docs.rs/guest-server"

[dependencies]
